--- a/app/src/main/res/values-port-v21/dimen.xml
+++ b/app/src/main/res/values-port-v21/dimen.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="popup_width">340dp</dimen>
+    <dimen name="popup_height">550dp</dimen>
+</resources>
