--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -4,5 +4,5 @@
     <SwitchPreference
         android:defaultValue="false"
         android:key="start_new_memo"
-        android:title="Start with new memo" />
+        android:summary="@string/pref_start_with_new_memo" />
 </PreferenceScreen>
