--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -30,6 +30,7 @@
         android:layout_marginTop="8dp"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/lvEvents"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintStart_toStartOf="@+id/tvTime"
@@ -47,6 +48,7 @@
         android:text="@string/date"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Menu"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/tvTime"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -58,7 +60,6 @@
         android:id="@+id/tvTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
@@ -66,6 +67,7 @@
         android:text="@string/time"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Notification"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -80,14 +82,15 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
+        android:fadeScrollbars="false"
         android:hint="@string/note"
         android:inputType="textMultiLine"
         android:maxLines="5"
         android:scrollbarAlwaysDrawVerticalTrack="true"
         android:scrollbars="vertical"
-        android:fadeScrollbars="false"
         android:singleLine="false"
         android:text=""
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvDate"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
