--- a/app/src/main/res/layout/widget_list_row.xml
+++ b/app/src/main/res/layout/widget_list_row.xml
@@ -9,7 +9,6 @@
         android:id="@+id/tvDate"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:singleLine="true"
@@ -22,9 +21,17 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tvDate"
         android:layout_below="@+id/tvDate"
-        android:layout_marginTop="4dp"
         android:singleLine="true"
         android:text="@string/time"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tvAmount"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/tvDate"
+        android:layout_below="@+id/tvTime"
+        android:singleLine="true"
         android:textSize="12sp" />
 
     <TextView
