--- a/app/src/main/res/menu/action_mode_menu.xml
+++ b/app/src/main/res/menu/action_mode_menu.xml
@@ -3,6 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menuAmSelectAll"
+        android:checkable="false"
+        android:icon="@drawable/ic_select_all_white_24px"
+        android:title=""
+        android:visible="true"
+        app:showAsAction="never|ifRoom" />
+    <item
         android:id="@+id/menuAmDelete"
         android:checkable="false"
         android:icon="@drawable/ic_delete_forever_white_24dp"
