--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -63,7 +63,7 @@
         android:gravity="fill_vertical"
         android:text="@string/time"
         android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
+        android:textAppearance="@style/TextAppearance.Compat.Notification"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintHorizontal_bias="0.0"
