--- a/app/src/main/res/layout/date_time_picker.xml
+++ b/app/src/main/res/layout/date_time_picker.xml
@@ -30,19 +30,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btnDateTime"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        android:drawableStart="@drawable/ic_date_range_black_24px"
-        android:text="@string/date"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datePicker"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:src="@drawable/ic_date_range_black_24px"
+        android:focusable="true" />
 
 </android.support.constraint.ConstraintLayout>
