--- a/app/src/main/res/layout/main_activity_edit.xml
+++ b/app/src/main/res/layout/main_activity_edit.xml
@@ -29,7 +29,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/lvEvents"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintStart_toStartOf="@+id/tvTime"
@@ -47,7 +47,7 @@
         android:text="@string/date"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Menu"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/tvTime"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -65,7 +65,7 @@
         android:text="@string/time"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.Compat.Notification"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -88,7 +88,7 @@
         android:scrollbars="vertical"
         android:singleLine="false"
         android:text=""
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvDate"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
@@ -113,7 +113,7 @@
         android:layout_height="42dp"
         android:layout_gravity="start"
         android:background="@drawable/back"
-        android:visibility="gone"
+        android:visibility="visible"
         app:contentInsetStart="0dp"
         app:contentInsetStartWithNavigation="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout"
