--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -81,7 +81,7 @@
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fadeScrollbars="false"
-        android:hint="@string/note"
+        android:hint="@string/new_memo"
         android:inputType="textMultiLine"
         android:maxLines="5"
         android:scrollbarAlwaysDrawVerticalTrack="true"
