--- a/app/src/main/res/layout/main_activity_edit.xml
+++ b/app/src/main/res/layout/main_activity_edit.xml
@@ -81,7 +81,7 @@
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fadeScrollbars="false"
-        android:hint="@string/note"
+        android:hint="@string/new_memo"
         android:inputType="textMultiLine"
         android:maxLines="5"
         android:scrollbarAlwaysDrawVerticalTrack="true"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomToolbar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,7 @@
         android:visibility="visible"
         app:contentInsetStart="0dp"
         app:contentInsetStartWithNavigation="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/coordinatorLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
