--- a/app/src/main/res/layout/main_activity_edit.xml
+++ b/app/src/main/res/layout/main_activity_edit.xml
@@ -78,9 +78,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:fadeScrollbars="false"
+        android:gravity="top"
         android:hint="@string/new_memo"
         android:inputType="textMultiLine"
         android:maxLines="5"
