--- a/app/src/main/res/layout/widget_list_row.xml
+++ b/app/src/main/res/layout/widget_list_row.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:id="@+id/tvDate"
-        android:layout_width="70dp"
+        android:layout_width="54dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tvTime"
-        android:layout_width="70dp"
+        android:layout_width="54dp"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tvDate"
         android:layout_below="@+id/tvDate"
@@ -28,9 +28,9 @@
 
     <TextView
         android:id="@+id/tvAmount"
-        android:layout_width="70dp"
+        android:layout_width="54dp"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/tvDate"
+        android:layout_alignStart="@+id/tvTime"
         android:layout_below="@+id/tvTime"
         android:singleLine="true"
         android:textColor="@android:color/darker_gray"
@@ -42,12 +42,12 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@+id/tvDate"
         android:text="@string/content"
         android:textColor="@android:color/darker_gray"
-        android:textSize="14sp" />
+        android:textSize="12sp" />
 
 
 </RelativeLayout>
