--- a/app/src/main/res/layout/date_time_picker.xml
+++ b/app/src/main/res/layout/date_time_picker.xml
@@ -34,15 +34,16 @@
         android:id="@+id/fabDateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_date_range_white_24px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/datePicker"
-        app:layout_constraintVertical_bias="1.0"
-        android:src="@drawable/ic_date_range_white_24px"
-        android:focusable="true" />
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
