--- a/app/src/main/res/layout/main_activity_edit.xml
+++ b/app/src/main/res/layout/main_activity_edit.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/lvEvents"
-        app:layout_constraintEnd_toStartOf="@+id/etMemo"
+        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
         app:layout_constraintStart_toStartOf="@+id/tvTime"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
@@ -49,7 +49,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Menu"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/tvTime"
-        app:layout_constraintEnd_toStartOf="@+id/etMemo"
+        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
@@ -66,14 +66,14 @@
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.Compat.Notification"
         android:visibility="visible"
-        app:layout_constraintEnd_toStartOf="@+id/etMemo"
+        app:layout_constraintEnd_toStartOf="@+id/emvMemo"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
     <com.example.user.eventest.EditMemoView
-        android:id="@+id/etMemo"
+        android:id="@+id/emvMemo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -105,7 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etMemo" />
+        app:layout_constraintTop_toBottomOf="@+id/emvMemo" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/bottomToolbar"
