--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorMemoSelect">#c5cae9</color>
     <color name="colorMemoMultipleSelect">#9fa8da</color>
+    <color name="colorIconTint">#757575</color>
 </resources>
