--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -42,6 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:maxLines="3"
         android:text="@string/content"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
